# under-armour

./: .dockerignore  .env.sample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  dev.Dockerfile  main.py  pyproject.toml
.github/: dependabot.yml
app/: app.py  settings.py
app/domain/: model.py
app/helpers/: random_header.py
app/infra/playwright/: playwright.py
app/infra/psycopg/: postgres.py
app/infra/selectolax/: helpers.py  parser.py
app/logging/: logger.py
k8s/: configmap.yml  job.yml  namespace.yml
k8s/logging/: kustomization.yml  namespace.yaml  rbac.yaml  vector-agent.toml
