[tool.poetry]
name = "under-armour"
version = "0.1.0"
description = "Under Armour"
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
{include = "*.py"},
{include = "app/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
psycopg = "^3.1.14"
playwright = "^1.37.0"
pydantic = "^2.3.0"
selectolax = "^0.3.16"
fake-useragent = "^1.2.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
